# genechart

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml
docs/: debugging-boxed-couples.md  lua-plugins.md  realistic-tree.md
examples/: README.md  generate.sh
examples/kennedy/: README.md  kennedy.toml  kennedy_boxes_photos.toml  kennedy_em.ged  kennedy_em_aliases.txt  kennedy_forest.txt  kennedy_highlights.txt  kennedy_jf.ged  kennedy_jf_aliases.txt  kennedy_patrick.ged  kennedy_ph.ged  kennedy_ph_aliases.txt  kennedy_rf.ged  kennedy_rf_aliases.txt  kennedy_simple.txt  photos.index
examples/kennedy/photos/: CREDITS.md
examples/shakespeare/: README.md  shakespeare.toml  shakespeare_highlights.txt  shakespeare_simple.txt
src/: cli.rs  defaults.toml  format.rs  main.rs  photos.rs  preferences.rs  scene.rs  text_metrics.rs  trace.rs  util.rs
src/backend/: font_metrics.rs  mod.rs  pdf.rs  realistic_tree.rs  svg.rs  text.rs
src/layout/: boxed_couples.rs  boxes.rs  common.rs  fan.rs  fancy.rs  fix_missing_horiz_connectors.md  mod.rs  simple.rs
src/parser/: genrep.rs  merge.rs  mod.rs
src/plugins/: mod.rs
tests/: integration_test.rs
tests/fixtures/: fixture_large.ged  plugins_sample.ged  sample.ged
tests/fixtures/plugins/: nickname.lua  usa.lua
