[package]
name = "genechart"
version = "0.5.5"
edition = "2024"
description = "Genealogical chart generator from GEDCOM files"
license = "MIT"
repository = "https://github.com/PLACEHOLDER/genechart"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
strfmt = "0.2"
anyhow = "1"
svg2pdf = "0.13"
pdf-writer = "0.12"
ttf-parser = "0.25"
fontdb = "0.23"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
base64 = "0.22"
rayon = "1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
strip = true
