[package]
name = "genechart"
version = "0.8.0"
edition = "2024"
description = "Genealogical chart generator from GEDCOM files"
license = "MIT"
repository = "https://github.com/AleBeda/genechart"
rust-version = "1.85"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
strfmt = "0.2"
anyhow = "1"
svg2pdf = "0.13"
pdf-writer = "0.12"
ttf-parser = "0.25"
fontdb = "0.23"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
base64 = "0.22"
rayon = "1"
# Optional: Lua plugin engine (enable with `--features lua`). Vendored Lua 5.4 is
# MIT-licensed and compiled from source (needs a C compiler via the `cc` crate).
mlua = { version = "0.10", features = ["lua54", "vendored"], optional = true }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
strip = true

[features]
bc_debug = []
# Experimental Lua plugin system (parse-time hooks). Default-off so normal
# builds need no C compiler. See README "Lua plugins (experimental)".
lua = ["dep:mlua"]
